--- a/GameCss.css
+++ b/GameCss.css
@@ -1,7 +1,7 @@
 td.cell {
     border: 1px solid #000000;
-    height: 4%;
-    width: 4%;
+    height: 4vh;
+    width: 4vh;
     background-color: #ffffff;
 }
 
