--- a/GameCss.css
+++ b/GameCss.css
@@ -40,6 +40,7 @@ a, .submitButton {
     text-align: center;
     height: 17px;
     width: 97.11px;
+    transition: 0.5s;
 }
 
 a:hover, .submitButton:hover {
